package ch.uzh.group8.checkersv3.dom;

public enum Player {
  PLAYER_WHITE,
  PLAYER_RED
}
